<resources>
    <string name="app_name" translatable="false">XBridge Debug</string>
    <string name="app_version_name" translatable="false">1.1.2</string>
    <string name="action_settings">Debug</string>
    <string name="xposed_description">A bridge between task and app [Lollipop]</string>
    <string name="package_name_copied">Package name copied:</string>
    <string name="force_stop">Force stop&#160;</string>
    <string name="error">Error:&#160;</string>
    <string name="experimental">experimental</string>
    <string name="cant_launch_in_xhalo">"Can't launch in the XHaloFloatingWindow, package:&#160;"</string>

    <string name="key_play" translatable="false">key_play</string>
    <string name="key_clipboard" translatable="false">key_clipboard</string>
    <string name="key_search" translatable="false">key_search</string>
    <string name="key_appops" translatable="false">key_appops</string>
    <string name="key_appsettings" translatable="false">key_appsettings</string>
    <string name="key_xprivacy" translatable="false">key_xprivacy</string>
    <string name="key_appinfo" translatable="false">key_appinfo</string>
    <string name="key_notifyclean" translatable="false">key_notifyclean</string>
    <string name="key_lightningwall" translatable="false">key_lightningwall</string>
    <string name="key_myandroidtools" translatable="false">key_myandroidtools</string>
    <string name="key_xhalofloatingwindow" translatable="false">key_xhalofloatingwindow</string>
    <string name="key_forcestop" translatable="false">key_forcestop</string>
    <string name="key_show_dismiss_now" translatable="false">key_show_dismiss_now</string>
    <string name="key_reboot_systemui" translatabel="false">key_reboot_systemui</string>
    <string name="key_reboot_settings" translatabel="false">key_reboot_settings</string>
    <string name="key_xda" translatable="false">key_xda</string>
    <string name="key_debug" translatable="false">key_debug</string>

    <string name="key_play_status_bar" translatable="false">key_play_status_bar</string>
    <string name="key_play_recent_task" translatable="false">key_play_recent_task</string>
    <string name="key_play_app_info" translatable="false">key_play_app_info</string>
    <string name="key_play_is_market" translatable="false">key_play_is_market</string>
    <string name="key_clipboard_status_bar" translatable="false">key_clipboard_status_bar</string>
    <string name="key_clipboard_recent_task" translatable="false">key_clipboard_recent_task</string>
    <string name="key_clipboard_app_info" translatable="false">key_clipboard_app_info</string>
    <string name="key_search_status_bar" translatable="false">key_search_status_bar</string>
    <string name="key_search_recent_task" translatable="false">key_search_recent_task</string>
    <string name="key_search_app_info" translatable="false">key_search_app_info</string>
    <string name="key_search_customize_url" translatable="false">key_search_cutomize_url</string>
    <!-- default url of search action -->
    <string name="search_url_default" translatable="false">"https://www.google.com/search?q="</string>
    <string name="key_search_url" translatable="false">key_search_url</string>
    <string name="key_appops_status_bar" translatable="false">key_appops_status_bar</string>
    <string name="key_appops_recent_task" translatable="false">key_appops_recent_task</string>
    <string name="key_appops_app_info" translatable="false">key_appops_app_info</string>
    <string name="key_appsettings_status_bar" translatable="false">key_appsettings_status_bar</string>
    <string name="key_appsettings_recent_task" translatable="false">key_appsettings_recent_task</string>
    <string name="key_appsettings_app_info" translatable="false">key_appsettings_app_info</string>
    <string name="key_xprivacy_status_bar" translatable="false">key_xprivacy_status_bar</string>
    <string name="key_xprivacy_recent_task" translatable="false">key_xprivacy_recent_task</string>
    <string name="key_xprivacy_app_info" translatable="false">key_xprivacy_app_info</string>
    <string name="key_appinfo_status_bar" translatable="false">key_appinfo_status_bar</string>
    <string name="key_appinfo_recent_task" translatable="false">key_appinfo_recent_task</string>
    <string name="key_appinfo_app_info" translatable="false">key_appinfo_app_info</string>
    <string name="key_notifyclean_status_bar" translatable="false">key_notifyclean_status_bar</string>
    <string name="key_notifyclean_recent_task" translatable="false">key_notifyclean_recent_task</string>
    <string name="key_notifyclean_app_info" translatable="false">key_notifyclean_app_info</string>
    <string name="key_lightningwall_status_bar" translatable="false">key_lightningwall_status_bar</string>
    <string name="key_lightningwall_recent_task" translatable="false">key_lightningwall_recent_task</string>
    <string name="key_lightningwall_app_info" translatable="false">key_lightningwall_app_info</string>
    <string name="key_myandroidtools_status_bar" translatable="false">key_myandroidtools_status_bar</string>
    <string name="key_myandroidtools_recent_task" translatable="false">key_myandroidtools_recent_task</string>
    <string name="key_myandroidtools_app_info" translatable="false">key_myandroidtools_app_info</string>
    <string name="key_xhalofloatingwindow_status_bar" translatable="false">key_xhalofloatingwindow_status_bar</string>
    <string name="key_xhalofloatingwindow_recent_task" translatable="false">key_xhalofloatingwindow_recent_task</string>
    <string name="key_xhalofloatingwindow_app_info" translatable="false">key_xhalofloatingwindow_app_info</string>
	<string name="key_xhalofloatingwindow_floating_flag" translatable="false">key_xhalofloatingwindow_floating_flag</string>
    <string name="key_xhalofloatingwindow_show_button_now" translatable="false">key_xhalofloatingwindow_show_button_now</string>
    <string name="key_size_of_icon_in_noti" translatable="false">key_size_of_icon_in_noti</string>

    <string name="title_show_in_status_bar">Show in notification</string>
    <string name="summary_show_in_status_bar">Show in notification long click view\n(Need reboot system UI)</string>
    <string name="title_show_in_recent_task">Show in recent</string>
    <string name="summary_show_in_recent_task">Show in recent task header long click view</string>
    <string name="title_show_in_app_info">Show in app info</string>
    <string name="summary_show_in_app_info">Show in the action bar of app info settings\n(Need reboot system)</string>
    <string name="summary_play">Add view in Play store button in the system</string>
    <string name="title_play">View in Play store</string>
    <string name="summary_clipboard">Add copy to clipboard button in the system</string>
    <string name="title_clipboard">Copy to clipboard</string>
    <string name="summary_search">Add search button in the system</string>
    <string name="title_search">Search</string>
    <string name="summary_appops">Add view in AppOpsXposed button in the system</string>
    <string name="title_appops">View in AppOpsXposed</string>
    <string name="summary_appsettings">Add view in AppSettings(Xposed) button in the system</string>
    <string name="title_appsettings">View in AppSettings(Xposed)</string>
    <string name="summary_xprivacy">Add view in XPrivacy button in the system</string>
    <string name="title_xprivacy">View in XPrivacy</string>
    <string name="summary_appinfo">Add view in default app info screen button in the system</string>
    <string name="title_appinfo">View in default app info screen</string>
    <string name="summary_notifyclean">Add view in NotifyClean button in the system</string>
    <string name="title_notifyclean">View in NotifyClean</string>
    <string name="summary_lightningwall">Add view in LightningWall button in the system</string>
    <string name="title_lightningwall">View in LightningWall</string>
    <string name="summary_myandroidtools">Add view in MyAndroidTools button in the system</string>
    <string name="title_myandroidtools">View in MyAndroidTools</string>
    <string name="summary_xhalofloatingwindow">Add view in XHaloFloatingWindow(Or native floating mode) button in the system</string>
    <string name="title_xhalofloatingwindow">View in XHaloFloatingWindow(Or native floating mode)</string>
    <string name="summary_xhalofloatingwindow_show_button_now">Show XHaloFloatingWindow(Or native floating mode) button immediately when recent task screen show up</string>
    <string name="title_xhalofloatingwindow_show_button_now">Show button immediately</string>
    <string name="summary_xhalofloatingwindow_show_in_recent_task">Show in the header alongside of dismiss button in the recent task screen</string>
    <string name="title_xda">XDA thread</string>
    <string name="title_forcestop">Force stop package</string>
    <string name="summary_forcestop">In the recent task screen, long press dismiss button(x) to force stop package</string>
    <string name="summary_show_dismiss_now">Show dismiss button immediately when recent task screen show up</string>
    <string name="title_show_dismiss_now">Show dismiss button immediately</string>
    <string name="title_search_url">Search url</string>
    <string name="title_customize_url">Customize search url</string>
    <string name="title_customize">Customize</string>
    <string name="title_is_market">Show App Store only</string>
    <string name="summary_is_market">Use market link instead of browser link to show more app store</string>
    <string name="summary_appops_show_in_app_info">AppOpsXposed already done itself :)</string>
    <string name="title_about">About</string>
    <string name="title_reboot_system_ui">Reboot system UI</string>
    <string name="title_enhance">Enhance</string>
    <string name="title_settings">Settings</string>
    <string name="title_size_of_icon_in_noti">Size of icon in notification</string>

    <string name="message_size_input">From 1 to 1000 (Default 75)</string>
	<string name="floating_flags">Floating flag system id</string>
    <string name="floating_flags_summary">This flag is attached to windows so the systems knows their status.\nChoose the original style with old xHaloFloatingWindow. Use 0x2001 with XHFW3 mod.</string>
	
</resources>
