<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="@bool/xhalofloatingwindow_status_bar_default"
        android:key="@string/key_xhalofloatingwindow_status_bar"
        android:summary="@string/summary_show_in_status_bar"
        android:title="@string/title_show_in_status_bar"
        >
    </SwitchPreference>
    <SwitchPreference
        android:defaultValue="@bool/xhalofloatingwindow_recent_task_default"
        android:key="@string/key_xhalofloatingwindow_recent_task"
        android:summary="@string/summary_xhalofloatingwindow_show_in_recent_task"
        android:title="@string/title_show_in_recent_task">
    </SwitchPreference>
    <SwitchPreference
        android:defaultValue="@bool/xhalofloatingwindow_app_info_default"
        android:key="@string/key_xhalofloatingwindow_app_info"
        android:summary="@string/summary_show_in_app_info"
        android:title="@string/title_show_in_app_info">
    </SwitchPreference>
	<daylemk.xposed.xbridge.data.IntListPreference
	android:defaultValue="8192"
	android:entries="@array/option_floating_flags"
	android:entryValues="@array/option_floating_flags_values"
	android:key="@string/key_xhalofloatingwindow_floating_flag"
	android:summary="@string/floating_flags_summary"
	android:title="@string/floating_flags" />
    <PreferenceCategory android:title="@string/title_enhance">
        <SwitchPreference
            android:defaultValue="@bool/xhalofloatingwindow_show_button_now_default"
            android:key="@string/key_xhalofloatingwindow_show_button_now"
            android:summary="@string/summary_xhalofloatingwindow_show_button_now"
            android:title="@string/title_xhalofloatingwindow_show_button_now">
        </SwitchPreference>
    </PreferenceCategory>

</PreferenceScreen>
