<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="@bool/search_status_bar_default"
        android:key="@string/key_search_status_bar"
        android:summary="@string/summary_show_in_status_bar"
        android:title="@string/title_show_in_status_bar"
        >
    </SwitchPreference>
    <SwitchPreference
        android:defaultValue="@bool/search_recent_task_default"
        android:key="@string/key_search_recent_task"
        android:summary="@string/summary_show_in_recent_task"
        android:title="@string/title_show_in_recent_task">
    </SwitchPreference>
    <SwitchPreference
        android:defaultValue="@bool/search_app_info_default"
        android:key="@string/key_search_app_info"
        android:summary="@string/summary_show_in_app_info"
        android:title="@string/title_show_in_app_info">
    </SwitchPreference>
    <PreferenceCategory android:title="Customize">
        <SwitchPreference
            android:defaultValue="@bool/search_customize_default"
            android:key="@string/key_search_customize_url"
            android:title="Customize search url">
        </SwitchPreference>
        <EditTextPreference
            android:defaultValue="@string/search_url_default"
            android:dependency="@string/key_search_customize_url"
            android:key="@string/key_search_url"
            android:title="search url">

        </EditTextPreference>
    </PreferenceCategory>

</PreferenceScreen>